videos to frames

--- a/c++/.vscode/settings.json
+++ b/c++/.vscode/settings.json
@@ -86,6 +86,8 @@
         "typeindex": "cpp",
         "hash_map": "cpp",
         "format": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "stack": "cpp",
+        "unordered_set": "cpp"
     }
 }
