--- a/c++/.vscode/settings.json
+++ b/c++/.vscode/settings.json
@@ -88,6 +88,7 @@
         "format": "cpp",
         "codecvt": "cpp",
         "stack": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "any": "cpp"
     }
 }
