bundle adjustment and new Intrinsic Structure

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.27)
 project(sfm)
 find_package(OpenCV REQUIRED)
+find_package(Ceres REQUIRED)
 
 # Generate compile commands for clangd
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 find_library(
   UNISTRING_LIB
   NAMES unistring
@@ -17,11 +17,17 @@ find_library(
 if(UNISTRING_LIB AND MBEDCRYPTO_LIB)
   message("Libraries found")
   add_executable(
-    sfm ./src/SfmReconstruction.cpp ./src/FeatureUtil.cpp ./src/StereoUtil.cpp
-        ./src/main.cpp ./src/util.cpp # ./src/drawUtil.cpp
-    # ./calibration/CameraCalibration.cpp
-  )
-  target_link_libraries(sfm ${UNISTRING_LIB} ${MBEDCRYPTO_LIB} ${OpenCV_LIBS})
+    sfm
+    ./src/SfmReconstruction.cpp
+    ./src/FeatureUtil.cpp
+    ./src/StereoUtil.cpp
+    ./src/main.cpp
+    ./src/util.cpp
+    ./src/drawUtil.cpp
+    ./src/SfmBundleAdjustment.cpp
+    ./calibration/CameraCalibration.cpp)
+  target_link_libraries(sfm ${UNISTRING_LIB} ${MBEDCRYPTO_LIB} ${OpenCV_LIBS}
+                        Ceres::ceres)
 else()
   message("Did not find libraries")
 endif()
